practice/configmap-demo-env.yaml
apiVersion: v1
kind: Pod
metadata: 
   name: busybox
spec:
  containers: 
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ["-c","sleep 600"]
