practice/configmap-demo-volume-file.yaml
apiVersion: v1
kind: Pod
metadata: 
   name: busybox
spec:
  volumes:
  - name: app-demo
    configMap: 
      name: demo-configmap
      items: 
      - key: application.properties
        path: application.properties
  containers: 
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ["-c","sleep 600"]
    volumeMounts:
    - name: app-demo
      mountPath: /mydata
