practice/configmap-demo-volume.yaml
apiVersion: v1
kind: Pod
metadata: 
   name: busybox
spec:
  volumes:
  - name: demo
    configMap: 
      name: demo-configmap
  containers: 
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ["-c","sleep 600"]
    volumeMounts:
    - name: demo
      mountPath: /mydata
