practice/nginx-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
spec: 
  selector:
     matchLabels:
       demotype: nginx-daemonset-demo
  template:
    metadata:
      labels: 
       demotype: nginx-daemonset-demo
    spec:
      containers:
      - image: nginx
        name: nginx
        imagePullPolicy: IfNotPresent
      nodeSelector: 
        gpupresent: "true"
