practice/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    run: nginx
  name: nginx-deploy
spec: 
  replicas: 1
  selector:
     matchLabels:
       run: nginx
  template:
    metadata:
      labels: 
        run: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        imagePullPolicy: IfNotPresent
      nodeSelector: 
        mylabel: "node_label"
