practice/nginx-initContainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    run: nginx
  name: nginx-deploy
spec: 
  replicas: 1
  selector:
     matchLabels:
       run: nginx
  template:
    metadata:
      labels: 
        run: nginx
    spec:
      volumes:
      - name: shared-volume
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
