practice/pod_secret_demo_volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec: 
  volumes:
  - name: secret-volume
    secret: 
      secretName: secret-demo
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ["-c", "sleep 600"]
    volumeMounts:
    - name: secret-volume
      mountPath: /mydata
