practice/pv-pod-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec: 
  volumes:
  - name: host-volume
    persistentVolumeClaim:
      claimName: pvc-hostpath
  nodeSelector:
    mylabel: node_label
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ["-c", "sleep 600"]
    volumeMounts:
    - name: host-volume
      mountPath: /mydata
