practice/quota-demo-pod-memory-limit.yaml
apiVersion: v1
kind: Pod
metadata: 
   name: busybox
   namespace: quota-demo-ns
spec: 
   containers:
   - image: busybox
     name: busybox
     resources:
       limits:
         memory: "110Mi"
