practice/quota-limitrange-pod-memory.yaml
apiVersion: v1
kind: Pod
metadata: 
   name: busybox
   namespace: quota-demo-ns
spec: 
   containers:
   - image: busybox
     name: busybox
