practice/strategy-recreate-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    run: nginx
  name: nginx-deployment
spec: 
  replicas: 2
  selector: 
    matchLabels:
      run: nginx
  strategy:
    type: Recreate
  minReadySeconds: 5  # waiting time for another pod to be created 
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx:1.14
        name: nginx
