practice/ingress-resource-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-resource-1
spec: 
  rules: 
  - host: nginx.example.com
    http: 
      paths:
      - path: 
        backend:
          serviceName: nginx-deploy-main
          servicePort: 80
